@@ -33,17 +33,27 @@ execstr(libname+'=lib(""'+SIPDIR+'macros/'+'"")')
 // XXX TODO PREDEF ALL???
 
 // add the help chapter
-if getversion()=="scilab-2.7" then
+scilab_version=getversion();
+if scilab_version=="scilab-2.7" then
    %helps = [%helps; SIPDIR+'man', libtitle]
 else
-   add_help_chapter(libtitle,SIPDIR+'man');
+  if (str2code( part(scilab_version, 8)) <= 4) then //version <= 4.x.x
+     add_help_chapter(libtitle, SIPDIR + 'man');
+  else
+     //scilab 5
+     path_addchapter = SIPDIR + "jar/";
+     if ( fileinfo(path_addchapter) <> [] ) then
+        add_help_chapter(libtitle, path_addchapter, %F);
+        clear add_help_chapter;
+     end
+  end
 end
 
 // ADD C routines
 exec (SIPDIR+'loader_include.sce');
 
 mess=[libtitle+' loaded';
-    'Enter ""exec(SIPDEMO);"" for demonstrations.']
+    'Enter ""exec(SIPDEMO);"" for demonstrations.'; ''];
 
 write(%io(2),'--------------------------------------------');
 write(%io(2),mess);
