@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1" standalone="no"?>
 <!-- Better processed with html_sip.xsl -->
 <!DOCTYPE MAN SYSTEM "mansip.dtd">
-<!-- $Revision: 1.1 $ $Date: 2005-07-20 01:33:34 $ -->
+<!-- $Revision: 1.2 $ $Date: 2009-04-04 21:31:21 $ -->
 <MAN>
 <LANGUAGE>eng</LANGUAGE>
 <TITLE>mogrify</TITLE>
@@ -67,10 +67,6 @@
    </PARAM_ITEM>
 </PARAM_INDENT>
 </PARAM>
-<!-- ================================= -->
-<SECTION label="News">
-mogrify is now working with truecolor and paletted images.
-</SECTION>
 <!-- ================================= -->
 <DESCRIPTION>
 <P>
@@ -1033,3 +1029,9 @@ found at
    <SEE_ALSO_ITEM> <LINK>imfinfo</LINK> </SEE_ALSO_ITEM>
 </SEE_ALSO>
 </MAN>
+<!-- =================================================== 
+           SIP - Scilab Image Processing toolbox
+           Copyright (C) 2002-2004  Ricardo Fabbri
+
+       See the file COPYING for license-related issues
+     =================================================== -->
